--- a/assets/css/custom-nav.css
+++ b/assets/css/custom-nav.css
@@ -1,16 +1,20 @@
 .navbar {
-  width: 100vh;
+  position: relative;
+  justify-content: space-evenly;
+  font-family: "Raleway";
+  list-style: none;
+  margin: 0;
+  padding: 8px 0;
+  display: flex;
+  align-items: center;
 }
 
 .navbar ul {
-  display: flex;
-  list-style: none;
-  margin: 0;
-  padding: 0;
+  font-weight: 300;
 }
 
 .navbar li {
-  margin-right: 20px;
+  margin-right: 12px;
 }
 
 .navbar a {
@@ -53,6 +57,10 @@
   display: block;
 }
 
+li *:last-child {
+  margin-bottom: 0;
+}
+
 .navbar ul ul li {
   margin: 0;
   white-space: nowrap;
@@ -66,17 +74,18 @@
 /* Style the current and selected page's link in submenus */
 .navbar ul ul a.active,
 .navbar ul ul a.selected {
-
   color: var(--text-color);
 }
 
+.collapse {
+  margin:0;
+}
 .navbar-collapse {
   padding: 5px 0;
   margin: 0;
 }
 
 .navbar-nav .nav-item {
-  font-family: "Montserrat";
   font-size: 16px;
 }
 
@@ -90,17 +99,14 @@
   color: var(--text-color-light);
 }
 
-.logo {
-  font-size: 24px;
-  font-weight: bold;
-  font-family: "Railway";
-  text-decoration: none;
-  color: var(--text-color);
-  transition: color 0.3s ease;
+.navigation {
+  margin-left: auto;
 }
 
-.logo:hover {
-  color: var(--text-color-light);
+.navbar-brand {
+  margin: 0;
+  padding: 8px 0;
+  left: 0;
 }
 
 @media (min-width: 768px) {
