--- a/assets/css/layout.css
+++ b/assets/css/layout.css
@@ -1,16 +1,30 @@
+*,
+*::before,
+*::after {
+  box-sizing: border-box;
+}
+
 body {
+  font-size: 16px;
   background-color: var(--bg-color);
   color: var(--text-color);
 }
 
 header {
-  position: fixed;
-  display: flex;
-  width: 100%;
-  height: 100px;
-  margin: 20px;
-  background-color: transparent;
-  z-index: 1;
+  padding: 40px;
+}
+
+h1 {
+  display: block;
+  font-size: 24px;
+  font-weight: bold;
+  margin: 0;
+  padding: 0;
+  color: inherit;
+}
+
+h1:hover {
+  color: var(--text-color-light);
 }
 
 .main-container {
@@ -34,6 +48,7 @@ header {
   margin: 20px 0 20px 20px;
   background-color: var(--bg-color);
   color: var(--text-color);
+  z-index: 1;
 }
 
 .fixed-nav-left {
@@ -47,7 +62,7 @@ header {
 }
 
 .rotated-text {
-  font-family: 'Montserrat';
+  font-family: "Montserrat";
   font-size: 16px;
   transform: rotate(90deg);
   transform-origin: left bottom;
